--- a/locale/fa/LC_MESSAGES/django.po
+++ b/locale/fa/LC_MESSAGES/django.po
@@ -2939,3 +2939,12 @@ msgstr "متوقف"
 
 msgid "done"
 msgstr "پایان یافته"
+
+msgid "p_30"
+msgstr "پایین"
+
+msgid "p_40"
+msgstr "متوسط"
+
+msgid "p_50"
+msgstr "بالا"
